--- a/Youtube-Blog/public/css/style.css
+++ b/Youtube-Blog/public/css/style.css
@@ -31,12 +31,33 @@ body {
      box-shadow: 0 3px 80px -30px oklch(12.9% 0.042 264.695);
      border-radius: 0.75rem;
 }
+#blogForm {
+     top: 2.5rem;
+     box-shadow: 0 3px 50px -30px oklch(12.9% 0.042 264.695);
+}
 
-#emailHelp {
+.sutle-text {
      position: absolute;
-     right: 2rem;
+     right: 2.5rem;
      color: oklch(37.2% 0.044 257.287);
      font-weight: 600;
+}
+#fullNameSutleText {
+     position: relative;
+     left: 90%;
+     margin-bottom: 0;
+}
+#blog-subtle-text {
+     position: relative;
+     bottom: 0.65rem;
+     right: 1rem;
+     color: oklch(37.2% 0.044 257.287);
+     font-weight: 700;
+     font-size: x-large;
+}
+#blogBtn {
+     position: relative;
+     left: 93%;
 }
 
 .header {
