--- a/Youtube-Blog/views/homepage.ejs
+++ b/Youtube-Blog/views/homepage.ejs
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <%- include('./partials/head.ejs') %>
-     <title>HomePage</title>
-     <link rel="stylesheet" href="/css/style.css">
+          <title>HomePage</title>
+          <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
      <%- include('./partials/nav.ejs') %>
 
+     <% if (locals.user) { %>
+          <div class="m-5 overflow-x-scroll"> 
+               <%= JSON.stringify(user) %>
+          </div>
+
+          <script>
+               console.log(<%- JSON.stringify(user) %>);
+          </script>
+     <% } %>
 
      <%- include('./partials/script.ejs') %>
 </body>
