--- a/Youtube-Blog/views/signup.ejs
+++ b/Youtube-Blog/views/signup.ejs
@@ -15,30 +15,36 @@
                <div class="container">
                     <form action="/user/signup" method="post" enctype="multipart/form-data">
 
-                         <div class="mb-3">
-                              <label for="userName" class="form-label">Full Name</label>
-                              <input type="text" name="fullName" class="form-control" id="userName" />
-                              <p id="emailHelp" class="form-text">
+                         <div class="row row-cols-2">
+                              <div class="col">
+                                   <label for="firstName" class="form-label">First Name</label>
+                                   <input type="text" name="firstName" class="form-control" id="firstName" />
+                              </div>
+                              <div class="col">
+                                   <label for="lastName" class="form-label">Last Name</label>
+                                   <input type="text" name="lastName" class="form-control" id="lastName" />
+                              </div>
+                              <span id="fullNameSutleText" class="form-text sutle-text">
                                    Captial Letters*
-                              </p>
+                              </span>
                          </div>
 
                          <div class="mb-3 w-full">
                               <label for="emailInput" class="form-label">Email address</label>
                               <input type="email" class="form-control" name="email" id="emailInput"
                                    aria-describedby="email" />
-                              <p id="emailHelp" class="form-text">
+                              <span class="form-text sutle-text">
                                    Your email will not be shared with anyone
-                              </p>
+                              </span>
                          </div>
 
 
                          <div class="mb-3">
                               <label for="passwordInput" class="form-label">Password</label>
                               <input type="password" class="form-control" name="password" id="passwordInput" />
-                              <p id="emailHelp" class="form-text">
+                              <span class="form-text sutle-text">
                                    Password is fully secured
-                              </p>
+                              </span>
                          </div>
 
                          <div class="mb-3">
