--- a/Youtube-Blog/public/css/style.css
+++ b/Youtube-Blog/public/css/style.css
@@ -2,6 +2,10 @@ a {
      font-weight: 600;
 }
 
+nav {
+     background-color: oklch(86.5% 0.127 207.078);
+}
+
 nav > div > a {
      margin-left: 2rem;
      text-shadow: 0px 1px 1px rgb(0 0 0 / 0.2);
@@ -21,11 +25,19 @@ body {
      margin-right: 1rem;
 }
 
+.main-container {
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     padding: 2rem;
+}
+
 .container {
-     position: relative;
-     top: 6rem;
+     position: absolute;
+     margin-top: 5rem;
+     margin-left: 15%;
      background-color: oklch(92.8% 0.006 264.531);
-     max-width: 80rem;
+     max-width: 72rem;
      padding: 2rem;
      border: 0.1rem solid oklch(37.2% 0.044 257.287);
      box-shadow: 0 3px 80px -30px oklch(12.9% 0.042 264.695);
@@ -58,6 +70,10 @@ body {
 #blogBtn {
      position: relative;
      left: 93%;
+}
+#cardBtn {
+     position: relative;
+     left: 60%;
 }
 
 .header {
