--- a/Youtube-Blog/views/homepage.ejs
+++ b/Youtube-Blog/views/homepage.ejs
@@ -3,28 +3,31 @@
 
 <head>
      <%- include('./partials/head.ejs') %>
-          <title>HomePage</title>
-          <link rel="stylesheet" href="/css/style.css">
+     <title>HomePage</title>
+     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body style="overflow-y: scroll;">
      <%- include('./partials/nav.ejs') %>
 
      <% if (locals.user) { %>
           
-          <div class="main-container ">
-               <% locals.blogs.forEach(blog => { %>
-                    <% if (blog.createdBy == locals.user._id) { %>
-                         <div class="card m-xxl-4" style="width: 18rem;">
-                              <img src="<%= blog.coverImgUrl %>" class="card-img-top h-75" alt="blog-image">
-                              <div class="card-body">
-                                   <h5 class="card-title fs-5 fw-semibold"><%= blog.title.toUpperCase() %></h5>
-                                   <p class="card-text fs-6 fst-italic fw-normal mb-xl-5"><%= blog.summary %></p>
-                                   <a href="/blog/<%= blog._id %>" id="cardBtn" class="btn btn-primary ">View More</a>
+          <div class="main-container">
+               <div class="row row-cols-4" style="width: 100%; height: 100%;">
+                    <% locals.blogs.forEach(blog => { %>
+                         <% if (blog.createdBy == locals.user._id) { %>
+                              <div class="col" style="display: flex; justify-content: center;">
+                                   <div class="card m-4" style="max-width: 18rem; max-height: 22rem; overflow: hidden;" >
+                                   <img src="<%= blog.coverImgUrl %>" class="card-img-top"  alt="blog-image" style="min-height: 50%; height: 50%; max-height: 50%;">
+                                   <div class="card-body">
+                                        <h5 class="card-title fs-5 fw-semibold mb-0" style="height: 2rem; max-height: 2rem;"><%= blog.title.substring(0, 20).toUpperCase() %></h5>
+                                        <p class="card-text fs-6 fst-italic fw-normal mt-0 mb-0" style="height: 5rem; max-height: 5rem;"><%= blog.summary.substring(0, 110) %></p>
+                                        <a href="/blog/<%= blog._id %>" id="cardBtn" class="btn btn-primary" style="margin-left: 0.6rem; margin-top: 0.1rem;">View More</a>
+                                   </div>
                               </div>
-                         </div>
-                    <% } %>
-               <% }) %>
+                         <% } %>
+                    <% }) %>
+               </div>
           </div>
 
           <script>
